feat: add gorm
