# api/internal/database/ticket_model.go
@@ -1,0 +1,8 @@
+package database
+
+type Ticket struct {
+	ID        uint   `gorm:"primaryKey"`
+	Name      string `gorm:"not null"`
+	Desc      string `gorm:"not null"`
+	Allocation int    `gorm:"default:100"`
+}
