# api/internal/domain/ticket.go
@@ -1,16 +1,33 @@
 package domain
 
+
 type Ticket struct {
-	ID         int    `json:"id"`
+	ID         uint
+	Name       string
+	Desc       string
+	Allocation int
+}
+
+type TicketRequest struct {
 	Name       string `json:"name"`
 	Desc       string `json:"desc"`
 	Allocation int    `json:"allocation"`
 }
 
-type CreateTicketRequest struct {
+type TicketResponse struct {
+	ID         uint   `json:"id"`
 	Name       string `json:"name"`
 	Desc       string `json:"desc"`
 	Allocation int    `json:"allocation"`
+}
+
+func (t *Ticket) ToTicketResponse() TicketResponse {
+    return TicketResponse{
+        ID:         t.ID,
+        Name:       t.Name,
+        Desc:       t.Desc,
+        Allocation: t.Allocation,
+    }
 }
 
 type PurchaseRequest struct {
